--- a/app.json
+++ b/app.json
@@ -16,9 +16,22 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "fb342598-e7ad-4a48-9ec5-3efe406a178f"
+      }
+    },
+    "android": {
+      "package": "com.alihasan_123.boltexponativewind"
     }
   }
 }
